--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,7 +27,7 @@ $icon-font-path: '../fonts/';
 // endbower
 
 // ::-webkit-scrollbar {
-//     display: none;
+//     display: none
 // }
 
 body{
@@ -37,7 +37,7 @@ body{
   display: block;
   font-family: 'bentham', sans-serif;
   color: #dbdbdb;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 500;
 }
 
@@ -48,7 +48,7 @@ a, a:hover, a:visited, a:active{
 h3 {
   font-family: 'Noir-et-Blanc';
   text-align: center;
-  font-size: 50px;
+  font-size: 45px;
   margin-top: 30px;
   margin-bottom: 40px;
   letter-spacing: 6px;
@@ -69,7 +69,7 @@ h4 {
 }
 
 .content {
-  width: 75%;
+  width: 70%;
   margin: auto;
 }
 
@@ -188,7 +188,7 @@ img{
     display: table-cell;
     vertical-align: middle;
     img {
-      max-width: 800px;
+      max-width: 100%;
     }
   }
 }
@@ -337,7 +337,7 @@ img{
   width:150%;
   margin-top: 10px;
   margin-left: 10px;
-  font-size: 80px;
+  font-size: 38px;
   background-color: #000;
   color: #fff;
   background: transparent;
@@ -347,22 +347,27 @@ img{
 
 #menu-icon{
   position: absolute;
-  right: 25px;
-  top: 25px;
+  right: 16px;
+  top: 16px;
   img{
-    height: 70px;
+    height: 40px;
   }
   z-index: 8000;
 }
 @media (max-width:1279px) {
+  body{
+    font-size: 18px;
+  }
   #menu {
     display: none;
   }
   #menu-holder{
     background-color: rgba(0, 0, 0, .8);
-    height: 120px;
   }
   #menu-mobile {
     display: block;
+  }
+  .content {
+    width: 85%;
   }
 }
