--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -330,31 +330,21 @@ img{
 }
 
 }#menu-mobile {
+  z-index: 9;
   display: none;
   overflow-x: hidden;
-}
-
-#menu-mobile select {
-  position: absolute;
-  width:150%;
-  margin-top: 10px;
-  margin-left: 10px;
-  font-size: 38px;
-  background-color: #000;
-  color: #fff;
-  background: transparent;
-  border: none;
-  z-index: 9999;
+  width: 100vw;
+  height: 70px;
 }
 
 #menu-icon{
   position: absolute;
-  right: 16px;
+  left: 16px;
   top: 16px;
   img{
     height: 40px;
   }
-  z-index: 8000;
+  z-index: 10;
 }
 @media (max-width:1279px) {
   body{
@@ -376,4 +366,50 @@ img{
     padding-top: 75px;
     padding-bottom: 250px;
   }
+}
+
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%;
+  width: 0; 
+  position: fixed; 
+  z-index: 11; 
+  top: 0;
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  width: 250px;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  left: 120px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
